--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "17.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
     "styled-components": "^5.3.6",
     "tslib": "2.3.1",
