--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-dom": "17.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
+    "react-select2": "^4.0.3",
+    "select2": "^4.1.0-rc.0",
     "styled-components": "^5.3.6",
     "tslib": "2.3.1",
     "xlsx": "^0.18.5"
