--- a/src/webparts/newMro/NewMroWebPart.manifest.json
+++ b/src/webparts/newMro/NewMroWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
   "id": "008b3b6a-73eb-4763-8b3f-0fc9afbbb775",
-  "alias": "NewMroWebPart",
+  "alias": "Timesheet",
   "componentType": "WebPart",
 
   "version": "*",
