--- a/src/webparts/newMro/NewMroWebPart.manifest.json
+++ b/src/webparts/newMro/NewMroWebPart.manifest.json
@@ -14,11 +14,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", 
     "group": { "default": "Advanced" },
-    "title": { "default": "NewMROPROD" },
-    "description": { "default": "NewMRO description Production" }, 
+    "title": { "default": "TimesheetPROD" },
+    "description": { "default": "Timesheet description Production" }, 
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "NewMRO-PROD"
+      "description": "Timesheet-PROD"
     }
   }]
 }
