--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -8,12 +8,12 @@
       "@microsoft/teams-js": "2.4.1"
     },
     "version": "1.16.1",
-    "libraryName": "mro",
+    "libraryName": "timesheet",
     "libraryId": "3cd17a6f-e355-4d0f-985b-bc008a623cbc",
     "environment": "spo",
     "packageManager": "npm",
-    "solutionName": "MRO",
-    "solutionShortDescription": "MRO description",
+    "solutionName": "Timesheet",
+    "solutionShortDescription": "Timesheet description",
     "skipFeatureDeployment": true,
     "isDomainIsolated": false,
     "componentType": "webpart"
