--- a/package.json
+++ b/package.json
@@ -36,12 +36,10 @@
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "17.0.1",
-    "react-keyboard-time-input": "^2.1.1",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
     "react-select2": "^4.0.3",
-    "react-time-input": "^1.1.1",
-    "react-time-picker": "^6.6.0",
     "select2": "^4.1.0-rc.0",
     "styled-components": "^5.3.6",
     "tslib": "2.3.1",
