--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "select2": "^4.1.0-rc.0",
     "styled-components": "^5.3.6",
     "tslib": "2.3.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@microsoft/eslint-config-spfx": "1.16.1",
