--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
     "react-select2": "^4.0.3",
+    "react-table": "^7.8.0",
     "select2": "^4.1.0-rc.0",
     "styled-components": "^5.3.6",
     "tslib": "2.3.1",
